# ChangeLog for app-vim/gentoo-syntax
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/gentoo-syntax/ChangeLog,v 1.75 2007/02/13 06:08:34 pioto Exp $

*gentoo-syntax-20070212 (13 Feb 2007)

  13 Feb 2007; Mike Kelly <pioto@gentoo.org> -gentoo-syntax-20051221.ebuild,
  +gentoo-syntax-20070212.ebuild:
  Version bump. Fixes Bug #164312, Bug #164953, and Bug #164588. Remove old
  version.

  11 Feb 2007; Fabian Groffen <grobian@gentoo.org>
  gentoo-syntax-20051221.ebuild, gentoo-syntax-20051221-r1.ebuild,
  gentoo-syntax-20061106.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  23 Jan 2007; Marius Mauch <genone@gentoo.org>
  gentoo-syntax-20051221.ebuild, gentoo-syntax-20051221-r1.ebuild,
  gentoo-syntax-20061106.ebuild:
  Replacing einfo with elog

*gentoo-syntax-20061106 (06 Nov 2006)

  06 Nov 2006; Mike Kelly <pioto@gentoo.org> +gentoo-syntax-20061106.ebuild:
  Version bump. Fixes: Bug #122890 and Bug #145999. See Bug #148985 for more
  details.

  05 Nov 2006; Mike Kelly <pioto@gentoo.org>
  -files/gentoo-syntax-20050211-fix-escapes.patch,
  -files/gentoo-syntax-20050211-fix-xml.patch,
  -gentoo-syntax-20050325.ebuild, -gentoo-syntax-20050515.ebuild,
  -gentoo-syntax-20050618.ebuild:
  Removing old versions.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org>
  gentoo-syntax-20051221-r1.ebuild:
  Added ~sparc-fbsd keyword.

*gentoo-syntax-20051221-r1 (06 Sep 2006)

  06 Sep 2006; <tupone@gentoo.org>
  +files/gentoo-syntax-20051221-metadata.patch,
  +gentoo-syntax-20051221-r1.ebuild:
  Fixing creation of metadata.xml. Bug #129533 by me

  07 Apr 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove ciaranm from metadata.xml.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  gentoo-syntax-20051221.ebuild:
  Add ~x86-fbsd keyword.

  26 Feb 2006; Joshua Kinard <kumba@gentoo.org>
  gentoo-syntax-20051221.ebuild:
  Marked stable on mips.
