@@ -1,36 +1,11 @@
 AUX gentoo-syntax-20051221-metadata.patch 432 RMD160 61827ef68d01d567750e80bd54cbbbe2461eca0b SHA1 3a3c4885ef57dc4d10899f58cb1716ae8f3879b9 SHA256 c7fb5ed7a44d0213129cb327a25ecdcbf42cd4bf09d3d595608e05bf6275d6a0
-MD5 ced7cfe574d5be2824a321a9d9b189e2 files/gentoo-syntax-20051221-metadata.patch 432
-RMD160 61827ef68d01d567750e80bd54cbbbe2461eca0b files/gentoo-syntax-20051221-metadata.patch 432
-SHA256 c7fb5ed7a44d0213129cb327a25ecdcbf42cd4bf09d3d595608e05bf6275d6a0 files/gentoo-syntax-20051221-metadata.patch 432
 DIST gentoo-syntax-20051221.tar.bz2 19388 RMD160 abe882798aad8b89df0ce376d9b64db708c65fa7 SHA1 69076990be5f47dafcbbfa916808061eafbeed50 SHA256 73c00b2ddee5f87e772bcb5797042e00f7f99d888609068a346ecddada935373
 DIST gentoo-syntax-20061106.tar.bz2 19656 RMD160 4c5b70ea9747f06f24dc1c35e832aeab6f25e9da SHA1 7571cd8bf7870c5f7becee1e25d19eed6676b7f4 SHA256 1dd05c3c02bc6449e9e0795471408f744ee4798243bf45cdbb63a131258fb340
 DIST gentoo-syntax-20070212.tar.bz2 20119 RMD160 e7a43b3340f58c6c01655f3e4664db517268e6a7 SHA1 1954deaa7d1020a79134c3e95ccb17d61de2e2cb SHA256 5ce1a3c3baaf87c1bea5938f64d297758e544ab602e9f315f389a8852c6f44db
+DIST gentoo-syntax-20070506.tar.bz2 19378 RMD160 8f033ae09d845814ea8f233cda4509587f0c34ba SHA1 7d66f736034c1ecab5ec23ca951609b09cdd129d SHA256 82ba1c72db6d140295154e9630af9ce5c6abb5b2de5d0f1d9a3a78d1b54abeea
 EBUILD gentoo-syntax-20051221-r1.ebuild 1679 RMD160 a4bf9afe7b24de7a13f2238b04d453fad6e9c205 SHA1 c7125e60ebea5d1ab885f7830633c2cf411a6d3c SHA256 25acdd1873ee8d0aba5c5050e0b5ebcac74ed10d0fef1fa99c0cbd274be0f4c0
-MD5 9dab4933cb4803fac9bcd04a5594f29e gentoo-syntax-20051221-r1.ebuild 1679
-RMD160 a4bf9afe7b24de7a13f2238b04d453fad6e9c205 gentoo-syntax-20051221-r1.ebuild 1679
-SHA256 25acdd1873ee8d0aba5c5050e0b5ebcac74ed10d0fef1fa99c0cbd274be0f4c0 gentoo-syntax-20051221-r1.ebuild 1679
 EBUILD gentoo-syntax-20061106.ebuild 1649 RMD160 c6aef660ab21844a1426660556d0014ff182489c SHA1 fcfbea0667275959f1fd85d0d4e059127b8a78d1 SHA256 61d6ae309c6ceda723466cea72b7636ad5fd857acdb5578bf38cb925fc30231f
-MD5 c0674d43783a83d61635034d7dceb9ae gentoo-syntax-20061106.ebuild 1649
-RMD160 c6aef660ab21844a1426660556d0014ff182489c gentoo-syntax-20061106.ebuild 1649
-SHA256 61d6ae309c6ceda723466cea72b7636ad5fd857acdb5578bf38cb925fc30231f gentoo-syntax-20061106.ebuild 1649
 EBUILD gentoo-syntax-20070212.ebuild 1641 RMD160 d5ca443bbe8d0d89deb6caff5caabb12f805ddda SHA1 40cbb7abb0467aa6dc264604b5b7b0661847a855 SHA256 716a4fcb928cf14e003f674b5b79400b86a3c918b581eb53edabbb14917cccbc
-MD5 17838dcd29a6cd9669da41f825cd104f gentoo-syntax-20070212.ebuild 1641
-RMD160 d5ca443bbe8d0d89deb6caff5caabb12f805ddda gentoo-syntax-20070212.ebuild 1641
-SHA256 716a4fcb928cf14e003f674b5b79400b86a3c918b581eb53edabbb14917cccbc gentoo-syntax-20070212.ebuild 1641
-MISC ChangeLog 12656 RMD160 d59ec6887c78a580f2d8ae1c7610fb25ad8ef094 SHA1 9930d1026ccbe7949153577899ddb562b0ae89f9 SHA256 d488b42a57ef5f6e94d8ccdc723d032ab3286287107a181e89cb776dc5b01c22
-MD5 82479cbfd711209d94712934869c3426 ChangeLog 12656
-RMD160 d59ec6887c78a580f2d8ae1c7610fb25ad8ef094 ChangeLog 12656
-SHA256 d488b42a57ef5f6e94d8ccdc723d032ab3286287107a181e89cb776dc5b01c22 ChangeLog 12656
+EBUILD gentoo-syntax-20070506.ebuild 1641 RMD160 0a4f56fa620f10b5b8cab06bdea48954fb19b1be SHA1 13837beacb14abe5d1266301a5e594bad5cc70a3 SHA256 6e8c9e44fe10ed1893a757e2b350cc0fd4065029ed93eeef27f166cb6d62ca42
+MISC ChangeLog 13049 RMD160 fe661db4e86de26f1e995fbc34a73b940ad655d8 SHA1 89a761f1d9065d9f0ed6019ad33dc0fb579dd54f SHA256 1d4819846cdedd2231a9397d2c68241c318b440a7213dd9d0c47aadcea2f1048
 MISC metadata.xml 157 RMD160 adcd6494e1e562ab5e0bd090e114622782ac753a SHA1 22983b8e9ba3045d8ccbc2b14393423f7f05d2ee SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a
-MD5 03408b23ff38d83b09d299387892f54d metadata.xml 157
-RMD160 adcd6494e1e562ab5e0bd090e114622782ac753a metadata.xml 157
-SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a metadata.xml 157
-MD5 1497d833eae6b7495173f62f4b8f7608 files/digest-gentoo-syntax-20051221-r1 268
-RMD160 1c175d4bb5cbb048d10fd16350fca8c46d85107f files/digest-gentoo-syntax-20051221-r1 268
-SHA256 68036a61847d35148a024542a7d00731750195a62e123c145275efec3f06e6c3 files/digest-gentoo-syntax-20051221-r1 268
-MD5 6907d42008208f9e4fbf2226785be130 files/digest-gentoo-syntax-20061106 268
-RMD160 b4d677ef2d5dfd260c8fe176586aa7241dfc7352 files/digest-gentoo-syntax-20061106 268
-SHA256 8d2c5950e84e4d4e83f105a33afe8e6e8ee3add87bdf60584142341cb09e486e files/digest-gentoo-syntax-20061106 268
-MD5 2c597ac05091cfaa90f3c75f50550f72 files/digest-gentoo-syntax-20070212 268
-RMD160 906727fb747a160bf0fc5b308722d1163ba124b2 files/digest-gentoo-syntax-20070212 268
-SHA256 36de5aa32cc72d06ce686850ecda90e8a0a77d78e497e64f20559686d1b459c2 files/digest-gentoo-syntax-20070212 268
